# totsugeki

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  fly.prod.toml  fly.test.toml
dioxus-components/: Cargo.toml  README.md
dioxus-components/src/: lib.rs
dioxus-components/src/ordering/: mod.rs  winner_bracket.rs
discord-bot/: Cargo.toml
discord-bot/src/: lib.rs  main.rs
discord-bot/src/commands/: help.rs
examples/totsugeki-discord-bot/: Cargo.toml
examples/totsugeki-discord-bot/src/: close.rs  create.rs  forfeit.rs  lib.rs  main.rs  next_match.rs  quit.rs  remove.rs  seed.rs  start.rs  validate.rs
examples/web/: .gitignore  Cargo.toml  Dioxus.toml  README.md
examples/web/src/: main.rs
frontend/: Cargo.toml  README.md  index.html  package.json  style.scss
frontend/src/: lib.rs  routes.rs
frontend/src/common/: mod.rs  tournament_server.rs
frontend/src/components/: app.rs  mod.rs  navbar.rs
totsugeki/: Cargo.toml  README.md
totsugeki-api/: Cargo.toml  README.md
totsugeki-api-request/: Cargo.toml
totsugeki-api-request/src/: bracket.rs  close.rs  disqualify.rs  forfeit.rs  join.rs  lib.rs  next_match.rs  organiser.rs  quit.rs  remove.rs  report.rs  start.rs  validate.rs
totsugeki-api/src/: bracket.rs  critical.rs  join.rs  lib.rs  main.rs  matches.rs  parsing.rs  resource.rs
totsugeki-api/src/persistence/: inmemory.rs  mod.rs  postgresql.rs  sqlite.rs
totsugeki-api/src/routes/: bracket.rs  health_check.rs  join.rs  mod.rs  organiser.rs  service.rs  test_utils.rs
totsugeki-api/tests/: bracket.rs  disqualifying.rs  forfeit.rs  health_check.rs  join.rs  matches_to_play.rs  organiser.rs  players.rs  quit.rs  remove.rs  report.rs  start.rs
totsugeki-api/tests/common/: bracket.rs  disqualify.rs  forfeit.rs  join.rs  matches.rs  mod.rs  next_match.rs  players.rs  report.rs  validate.rs
totsugeki-api/tests/report_scenarios/: mod.rs  single_elimination.rs  tournament_organiser_only.rs
totsugeki-discord-agent/: Cargo.toml  README.md
totsugeki-discord-agent/src/: lib.rs  main.rs
totsugeki-discord-agent/src/commands/: help.rs  join.rs  mod.rs  next_match.rs  report.rs
totsugeki-discord-bot/: Cargo.toml  README.md
totsugeki-discord-bot/src/: create.rs  disqualify.rs  forfeit.rs  help.rs  join.rs  lib.rs  main.rs  players.rs  quit.rs  remove.rs  report.rs  seed.rs  start.rs  validate.rs
totsugeki-frontend/: Cargo.toml  README.md  style.scss  webpack.config.js
totsugeki-frontend/src/: lib.rs  routes.rs
totsugeki-frontend/static/: index.html
totsugeki-native-app/: .gitignore  Cargo.toml  README.md  tailwind.config.js
totsugeki-native-app/locales/: en-US.txt
totsugeki-native-app/src/: lib.rs  main.rs
totsugeki/benches/: disqualification.rs
totsugeki/fuzz/: .gitignore  Cargo.toml  README.md
totsugeki/fuzz/src/: lib.rs
totsugeki/src/: bracket.rs  format.rs  join.rs  lib.rs  matches.rs  matches_to_play.rs  next_opponent.rs  ongoing.rs  opponent.rs  organiser.rs  player.rs  quit.rs  remove.rs  seeding.rs  validation.rs
totsugeki/tests/: SingleEliminationBracket.rs  double_elimination_bracket_test.rs  matches.rs  single_elimination_bracket_test.rs
tournament-organiser-api/: .env.example  Cargo.toml  README.md
tournament-organiser-api/.sqlx/: query-0725fb0bf4a33ce75fa0c377093624db5d81dd01ba8b85f02706931cf7a313ff.json  query-1072ac9a383cfdde074fb527b7b5d64581ef8a9eb0dddf32318a2a4ac61640b5.json  query-203144d6b087508fe675dc527d38f6fa27113264d7ce0d75e230eade874cf844.json  query-25637cacae8bbedd07065166257532311c1ae22bf90e8cce2e2f3ff815ce3e15.json  query-368f5b78f7aa80a065a0b07386f2a92594655028e66f05b35474dcabb5a6dcde.json  query-421b06d0fe24d6100854f470b4dbe9ed2748bb264221e604023d56006c94af74.json  query-59fb7c4af8e6b66b6f8d00cbf912239172283d79884be378f162354e6027f34e.json  query-5ed4d6ad2de65e5aeba87150756a05fa711e2dc31fec0814048c0390eb4444b3.json  query-789515ee45f55dfec30a7aa802d036b6379ba10ed990b24c962841a873ddcb1d.json  query-7e193716930e6d9e9b0fc130534c6dae5e3e6fa186a7193a54c7decfe1533d6d.json  query-850329b866e80a073650d5e8a2d7a4f1c26c063c112c04d4f1091bd4bf2aea6d.json  query-9702ad832ffcf6bbfc8df6c21b5d8642b0fa1c914f2f3ec1bd67ff00c4d2ea7d.json  query-9afa8560fd9fc89e233edd29cb8d4d10449577d29fc5032980b522a57a09e79f.json  query-9cdee0c4363471296f1e4eaec38301016c8ded51c46cd01f72ea80b0230aed65.json  query-a0d1b40ed1aa1474ed8d04d9c68d7c594a4663fb55e7ed7a988ead1f7a547c8f.json  query-a9ba84f7b28e7788b98d86506ec256faea02d02a4cb4a4ff6fe1b46cf927f74b.json  query-b42b654887a3562ddcbf62b80f56c4aa5bdaa10ba9b47478a49b21c25c48a296.json  query-b93c9cd261ac9f775c55f3548bc9f3023c4d1b091d6a0a872ecd304a2a5eb023.json  query-bf476267c114cf5c6e4cbb7052c6a7d9e78ba9e604f1630b10a3377699d1ad32.json  query-c02a6cd332d723664004064f8cee6d74dc468357409661efdd170bb9ff936d0c.json  query-c0e58360037da19b6c295a0e9b3ce4230aa2ede213a9125e956e66d1ec00c3c7.json  query-c1951f3c5ddab64dd581cb9af21a8c9b51813af3caf26ac0003c05f623d752bb.json  query-cdfae23552f519ca49294a883ddd18c0a03a1e712b8a1c280b1822aec7783291.json  query-d228e34687fd975923c7fa5e18134653a84dc3dcb69162da0ead7fdc8e54e700.json  query-fb7d4f4f0d7ba0b7ddd3cc4cccb140113738504de6eb7cb209168bebf156a638.json
tournament-organiser-api/migrations/: 20240116052500_create_users_table.up.sql  20240129044955_add_column_password_to_users_table.down.sql  20240129044955_add_column_password_to_users_table.up.sql  20240211111411_create_brackets_table.down.sql  20240211111411_create_brackets_table.up.sql  20240220052300_add_participants_column.down.sql  20240220052300_add_participants_column.up.sql  20240416153321_create_tournament_organisers_table.down.sql  20240416153321_create_tournament_organisers_table.up.sql
tournament-organiser-api/src/: health_check.rs  http.rs  lib.rs  login.rs  logout.rs  main.rs  registration.rs  resources.rs  router.rs  test_utils.rs  user.rs  users.rs
tournament-organiser-api/tests/: bracket.rs  health_check.rs  login.rs  registration.rs  user.rs
web/: .gitignore  Cargo.toml  README.md  package-lock.json
web/resources/: tailwind.css
(+327 files in other folders)
