[workspace]
members = [
  "totsugeki",
  "totsugeki-api",
  "totsugeki-api-request",
  "totsugeki-discord-bot",
  "totsugeki-frontend",
]

[package]
name = "test"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
async-trait = "0.1"
cucumber = "0.13"
futures = { version = "0.3.21", features = ["executor"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.9.0"
dotenv = "0.15"
log = "0.4.17"
totsugeki = { path = "totsugeki" }
totsugeki-api = { path = "totsugeki-api" }
totsugeki-api-request = { path = "totsugeki-api-request" }
totsugeki-discord-bot = { path = "totsugeki-discord-bot" }
reqwest = "0.11.11"
uuid = { version = "1.1.2", features = ["v4", "serde"] }

[dependencies.serenity]
version = "0.11.2"
features = ["cache", "framework", "standard_framework", "rustls_backend"]

[[test]]
name = "integration-cucumber"
harness = false
# Skip test because expensive
# FIXME add integration test in CI
test = false
