[package]
name = "dioxus-components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3.0"
totsugeki = { path = "../totsugeki" }
chrono = { version = "0.4.26", features = ["serde"] }
log = "0.4.6"
