[package]
name = "totsugeki-api-request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
totsugeki = { path = "../totsugeki/" }
reqwest = { version = "0.11.11" }
log = "0.4.17"
uuid = { version = "1.1.2", features = ["v4", "js"] } 
