[package]
name = "totsugeki-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1.3.31", features = ["rustls"] }
totsugeki = { path = "../totsugeki/" }
poem-openapi = { version = "2.0.1", features = ["swagger-ui"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
env_logger = "0.9.0"
log = "0.4.17"
serde = "1.0.137"
sqlite = "0.26.0"
reqwest = { version = "0.11.11", features = ["json"] }
jwt = "0.15.0"
hmac = "0.11"
sha2 = "0.9"
clap = { version = "3.2.8", features = ["derive"] }
