[package]
name = "totsugeki-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# version = "1.3.33"
poem = { git = "https://github.com/poem-web/poem", rev = "0c54289b4e94b3385b3a746f70a878531e725b5b", features = ["rustls"] }
totsugeki = { path = "../totsugeki/" }
poem-openapi = { git = "https://github.com/poem-web/poem", rev = "0c54289b4e94b3385b3a746f70a878531e725b5b", features = ["swagger-ui", "uuid"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
env_logger = "0.9.0"
log = "0.4.17"
serde = "1.0.137"
reqwest = { version = "0.11.11", features = ["json"] }
jwt = "0.15.0"
hmac = "0.11"
sha2 = "0.9"
uuid = { version = "1.1.2", features = ["v4", "serde"] }

[dependencies.serenity]
version = "0.11.2"

[dev-dependencies]
reqwest = { version = "0.11.11" }
poem = { git = "https://github.com/poem-web/poem", rev = "0c54289b4e94b3385b3a746f70a878531e725b5b", features = ["rustls", "test"] }
