[package]
name = "totsugeki-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# version = "1.3.33"
poem = { git = "https://github.com/poem-web/poem", rev = "0c54289b4e94b3385b3a746f70a878531e725b5b", features = ["rustls"] }
totsugeki = { path = "../totsugeki/", features = ["poem-openapi"] }
poem-openapi = { git = "https://github.com/poem-web/poem", rev = "0c54289b4e94b3385b3a746f70a878531e725b5b", features = ["swagger-ui", "uuid"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
serde = "1.0.137"
reqwest = { version = "0.11.11", features = ["json"] }
jwt = "0.15.0"
hmac = "0.11"
sha2 = "0.9"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
tracing = { version = "0.1.36", features = ["log"] }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
tracing-bunyan-formatter = "0.3.3"

[dependencies.serenity]
version = "0.11.2"

[dev-dependencies]
reqwest = { version = "0.11.11" }
poem = { git = "https://github.com/poem-web/poem", rev = "0c54289b4e94b3385b3a746f70a878531e725b5b", features = ["rustls", "test"] }
