[package]
name = "totsugeki-discord-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
totsugeki = { path = "../totsugeki" }
totsugeki-api = { path = "../totsugeki-api" }
totsugeki-api-request = { path = "../totsugeki-api-request" }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.11"
poem = { version = "1.3.31", features = ["rustls"] }
serde = "1.0.137"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
tracing = { version = "0.1.36", features = ["log"] }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
tracing-bunyan-formatter = "0.3.3"
chrono = "0.4.21"
chrono-tz = "0.6.3"

[dependencies.serenity]
version = "0.11.2"
features = ["cache", "framework", "standard_framework", "rustls_backend"]
