[package]
name = "totsugeki-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
totsugeki = { path = "../totsugeki" }
totsugeki-api = { path = "../totsugeki-api" }
totsugeki-api-request = { path = "../totsugeki-api-request" }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
env_logger = "0.9.0"
reqwest = "0.11.11"
log = "0.4.17"
poem = { version = "1.3.31", features = ["rustls"] }
serde = "1.0.137"
uuid = { version = "1.1.2", features = ["v4", "serde"] }

[dependencies.serenity]
version = "0.11.2"
features = ["cache", "framework", "standard_framework", "rustls_backend"]
