[package]
name = "totsugeki-native-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "5b61cbb9a0f37c5582c81fbaaa09b0385c996940", features = ["hot-reload"]}
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus", rev = "5b61cbb9a0f37c5582c81fbaaa09b0385c996940", features = ["hot-reload"]}
