[package]
name = "totsugeki-native-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "totsugeki-native-app"

[[bin]]
name = "css_class_row"
path = "./src/bin/css_class_row.rs"

[[bin]]
name = "css_class_col"
path = "./src/bin/css_class_col.rs"

[dependencies]
totsugeki = { path = "../totsugeki" }
# dioxus = { version = "0.3.2" , features = ["hot-reload"]}
# dioxus-desktop = { version = "0.3.0" , features = ["hot-reload"]}
# form submission problem fixed
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "0f684f056762a0dee05c321290b6cc4fc5299d72"}
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus", rev = "0f684f056762a0dee05c321290b6cc4fc5299d72"}
chrono = { version = "0.4.26", features = ["serde"] }
# fluent-bundle = "0.15.2"
# chrono = { version = "0.4.21", features = ["serde"] }
# dioxus = "0.3.2"
# dioxus-desktop = "0.3.0"

# TODO add tracing when it works with WASM
# tracing = "0.1"
# tracing-subscriber = "0.2.0"
# TODO add logging as a poorman's tracing

