[package]
name = "totsugeki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json", "rustls-tls"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
