[package]
name = "totsugeki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json", "rustls-tls"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
rand = { version = "0.8.5", features = ["getrandom"] }
chrono = { version = "0.4.21", features = ["serde"] }
test-log = { version = "0.2.11", features = ["trace"] }
# TODO remove unused code
#poem-openapi = { optional = true, git = "https://github.com/poem-web/poem", rev = "0c54289b4e94b3385b3a746f70a878531e725b5b", features = ["swagger-ui", "uuid"] }
#tracing = "0.1.36"
thiserror = "1.0.34"
# proptest = "1.0.0" # TODO try to use it?
