[package]
name = "totsugeki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json", "rustls-tls"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
rand = { version = "0.8.5", features = ["getrandom"] }
chrono = { version = "0.4.26", features = ["serde"] }
test-log = { version = "0.2.11", features = ["trace"] }
thiserror = "1.0.34"
# proptest = "1.0.0" # TODO try to use it?

[dev-dependencies]
criterion = "0.5.1"

# avoids `cargo bench -- --verbose` failing
[lib]
bench = false

[[bench]]
name = "disqualification"
harness = false
