[package]
name = "tournament-organiser-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
axum-extra = "0.6"
http = "0.2.9"
serde = { version = "1.0.171", features = ["derive"]}
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace", "cors"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
totsugeki = { path = "../totsugeki" }
totsugeki-display = { path = "../totsugeki-display" }
# like in the zero2prod book
# I don't like that sqlx might have a huge breaking change when going 1.0 but
# that's life
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono" ] }
chrono = "0.4.31"
reqwest = { version = "0.11.23", features = ["json"] }
secrecy = { version = "0.8.0", features = ["serde"] }
argon2 = { version = "0.5.3", features = ["std"] }
rand = "0.8.5"
base64 = "0.21.7"
