[package]
name = "totsugeki-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
totsugeki = { path = "../../totsugeki" }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
tracing = { version = "0.1.36", features = ["log"] }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
tracing-bunyan-formatter = "0.3.3"
chrono = "0.4.21"
chrono-tz = "0.6.3"
serde_json = "1.0.85"
fs4 = "0.6.2"
async-lock = "2.5.0"

[dependencies.serenity]
version = "0.11.2"
features = ["cache", "framework", "standard_framework", "rustls_backend"]
