[package]
name = "web"
version = "0.1.0"
authors = ["takecare"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
totsugeki = { path = "../../totsugeki" }
dioxus-components = { path = "../../dioxus-components" }
dioxus = "0.3.0"
dioxus-web = "0.3.0"
getrandom = { version = "0.2", features = ["js"] }
log = "0.4.6"
# WebAssembly Debug
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
